# organ

./: .gitignore  App.tsx  README.md  app.json  babel.config.js  eas.json  organ.code-workspace  package-lock.json  package.json  tsconfig.json  types.tsx
app/: types.tsx
app/components/: DismissKeyboard.tsx  ListEvent.tsx  Themed.tsx
app/hooks/: useCachedResources.ts  useMatrixClient.ts
app/lib/: backgroundSync.ts  localStorage.ts
app/navigation/: LinkingConfiguration.ts  index.tsx
app/screens/: CreateEventScreen.tsx  EditFollowsScreen.tsx  EventScreen.tsx  LoginScreen.tsx  NotFoundScreen.tsx
app/state/: context.tsx  fileSample.ts  reducers.ts
astro/: astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs  tsconfig.json  vite.config.js
astro/public/: sample-archie-content-scaffolding.md  sample-archie-partial.hbs  sample-archie.css
astro/sample/: iframe-code-lint-test.js  sample-archie.html
astro/src/: custom.d.ts  env.d.ts
components/: ListEvent.tsx  Themed.tsx
docs/: schema.md
hooks/: useCachedResources.ts  useMatrixClient.ts  useRetry.ts
lib/: ical.ts  parseIcal.ts  useMatrixClient.ts  useRetry.ts
markdown_to_html/: Cargo.toml
markdown_to_html/.cargo/: config.toml
markdown_to_html/src/: lib.rs
navigation/: LinkingConfiguration.ts  index.tsx
screens/: CalendarsScreen.tsx  CreateEventScreen.tsx  EventScreen.tsx  EventsScreen.tsx  LoginScreen.tsx  NotFoundScreen.tsx  SettingsScreen.tsx
src/components/: FileList.tsx  (+1 more)
state/: context.tsx  fileSample.ts  reducers.ts
wasm/: Cargo.toml
wasm/src/: lib.rs  types.rs
(+70 files in other folders)
