[package]
name = "markdown_to_html"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]  # For compiling to WASM

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pulldown-cmark = "0.9"
regex = "1"
handlebars = "6.1.0"
serde_yaml = "0.9.34"
